# ct_scan_mlops

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CHANGELOG.md  CLAUDE.md  COLLABORATION.md  CRITICAL_FIXES_APPLIED.md  Dockerfile  GEMINI.md  GetStarted.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE4_DEPLOY_GUIDE.md  PHASE_CHECKPOINT.md  PROJECT_OVERVIEW.md  README.md  README_FIRST.md  SESSION_RESUME.md  TASKS_REFACTORING.md  TERRAFORM_FIX_PLAN.md  ToDo.md  changes.md  classification_report.txt  cloudbuild-api.yaml  get_misclassified_files.py  index.html  objects.inv  pyproject.toml  tasks.py  test_api.sh
.claude/: SWEEP_PLAN.md  settings.json
.claude/agents/: architecture-reviewer.md  code-reviewer.md  dependabot-pr-merger.md  gemini-analyzer.md  ml-experiment-planner.md  repo-structure-enforcer.md
.claude/commands/: arch-review.md  arewedone.md  fullauto.md  gemini-architect.md  learn.md  project-status.md  sweep-status.md  train-status.md
.claude/docs/: learnings.md
.claude/skills/: repo-consolidation.md
.claude/templates/: FULLAUTO_CONTEXT.template.md
.devcontainer/: devcontainer.json
.dvc/: config
.github/: copilot-instructions.md  labeler.yml
.github/workflows/: api-tests.yaml  cml_data.yaml  deploy_cloudrun.yml  deploy_docs.yaml  docker-build.yaml  docker-publish.yaml  drift_detection.yml  linting.yaml  model_registry.yaml  pr_labeler.yml  pre-commit-update.yaml  pre-commit.yaml  promote_model.yml  push_wandb_model_to_gcs.yml  security_audit.yml  terraform.yml  tests.yaml  train_vertex.yml
api-reference/: index.html
api-reference/api/: index.html
api-reference/data/: index.html
api-reference/evaluate/: index.html
api-reference/model/: index.html
api-reference/train/: index.html
api-reference/utils/: index.html
artifacts/: profiling.dvc
cloudbuild/: cloudbuild-drift.yaml
configs/: config.yaml  config_production.yaml
configs/data/: chest_ct.yaml
configs/features/: default.yaml  top_features.yaml
configs/model/: cnn.yaml  dual_pathway.yaml  dual_pathway_bn_finetune_kygevxv0.yaml  dual_pathway_bn_finetune_kygevxv0_clean.yaml  dual_pathway_top_features.yaml  resnet18.yaml
configs/sweeps/: dual_pathway_finetune.yaml  dual_pathway_sweep.yaml  model_comparison_sweep.yaml  train_sweep.yaml
configs/train/: default.yaml  sweep-training-parameters.yaml
data/: .gitignore  drift.dvc  raw.dvc
data/drift/: current.csv  drift_report.html  reference.csv
development/: index.html
development/collaboration/: index.html
development/structure/: index.html
dockerfiles/: api.cloudrun.dockerfile  api.dockerfile  drift_api.dockerfile  train.dockerfile  train_cuda.dockerfile
docs/: AdenocarcinomaImprovementPlan.md  DEPENDENCIES.md  DOCKER_FIXES_SUMMARY.md  DOCKER_GUIDE.md  ExperimentAnalysis_20260129.md  ExperimentPlan_Phase2.md  FRONTEND_API_ENHANCEMENTS.md  Feature_Extraction.md  MIGRATION_DUAL_PATHWAY.md  MIGRATION_QUICK_REFERENCE.md  Pre_Commit_Hooks.md  QUICK_START_FRONTEND.md  Structure.md  TEAM_SETUP.md  drifting_robustness.md  mkdocs.yaml
docs/source/: index.md
docs/source/api-reference/: api.md  data.md  evaluate.md  index.md  model.md  train.md  utils.md
docs/source/development/: collaboration.md  (+2 more)
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
infrastructure/: README.md
infrastructure/docs/: MIGRATION.md  RUNBOOK.md  TERRAFORM_SETUP.md
infrastructure/scripts/: import-existing.sh
infrastructure/terraform/: .gitignore
logs/: TIER1_ANALYSIS_INSTRUCTIONS.md  profiling_results.txt
logs/tier1_20260129_152548/: durations.txt  results_summary.txt
reports/: README.md  report.py
reports/baseline_comparison/: comparison_metrics.json  comparison_report.txt
reports/feature_importance/: feature_ranking.txt  permutation_importance.json
reports/image_anomalies/: anomaly_report.csv  anomaly_report.json  flagged_image_paths.txt
reports/sweep_analysis/: sweep_data.csv
scripts/: adenocarcinoma_improvement_experiments.sh  analyze_tier1_results.py  auto-lint.sh  benchmark_onnx.py  check_tier1_progress.sh  convert_config.py  detect_image_anomalies.py  export_onnx.py  get_misclassified_files.py  phase2_finetune_experiments.sh  phase2_run_and_shutdown.sh  profile_training_time.py  security-check.sh  test_dockerfiles.sh  tier1_loss_experiments.sh
search/: search_index.json
src/ct_scan_mlops/: api.py  data.py  dataset.py  drift_api.py  drift_check.py  drift_gassian_noise.py  evaluate.py  extract_image_stats.py  feedback_store.py  get_data.py  inference_benchmark.py  inference_onnx.py  losses.py  model.py  model_info.py  onnx_export.py  promote_model.py  stats.py  sweep_best.py  sweep_train.py  test_model.py  train.py  utils.py  validate.py
tasks/: __init__.py  core.py  data.py  deploy.py  docker.py  docs.py  dvc_tasks.py  eval.py  git_tasks.py  monitor.py  quality.py  terraform.py  train.py  utils.py
tests/: README.md  conftest.py  locustfile.py  test_analysis_utils.py  test_api.py  test_checkpoint.py  test_config.py  test_data.py  test_evaluate.py  test_features.py  test_frontend.py  test_model.py  test_promote_model.py  test_train.py  test_training_logic.py
user-guide/: index.html
user-guide/configuration/: index.html
user-guide/docker/: index.html
user-guide/evaluation/: index.html
user-guide/training/: index.html
(+79 files in other folders)
